objects/Tax_Extension_Request__c.object
<CustomObject>
    <description>Form for Tax extensions</description>
    <fields>
        <fullName>Account_page__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax Extension Requests</relationshipLabel>
        <relationshipName>Tax_Extension_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Did_Anderson_Prepare_your_Returns__c</fullName>
        <label>Did Anderson Prepare your Returns?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Entity_Address__c</fullName>
        <label>Fifth Entity Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Entity_Business_Start__c</fullName>
        <label>Fifth Entity Business Start</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Entity_EIN__c</fullName>
        <label>Fifth Entity EIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Entity_Name__c</fullName>
        <label>Fifth Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Entity_Tax_Type__c</fullName>
        <label>Fifth Entity Tax Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fifth_Entity_Year_end_Date__c</fullName>
        <label>Fifth Entity Year end Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Entity_Business_Start__c</fullName>
        <label>First Entity Business Start</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Entity_EIN__c</fullName>
        <label>First Entity EIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Entity_Name__c</fullName>
        <label>First Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Entity_Tax_Type__c</fullName>
        <label>First Entity Tax Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>First_Entity_Year_end_Date__c</fullName>
        <label>First Entity Year end Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Entity_Business_Start__c</fullName>
        <label>Fourth Entity Business Start</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Entity_EIN__c</fullName>
        <label>Fourth Entity EIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Entity_Name__c</fullName>
        <label>Fourth Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Entity_Tax_Type__c</fullName>
        <label>Fourth Entity Tax Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fourth_Entity_Year_end_Date__c</fullName>
        <label>Fourth Entity Year end Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Field_Account_Number__c</fullName>
        <label>Hidden Field Account Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Married_Jointly_or_Seperately__c</fullName>
        <label>Married Jointly or Seperately</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Spouse_First__c</fullName>
        <label>Name of Spouse First</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Spouse_Last__c</fullName>
        <label>Name of Spouse Last</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Entities__c</fullName>
        <label>Number of Entities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payer_Address__c</fullName>
        <description>Main address</description>
        <label>Payer Address</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Personal_Or_Entity_Request__c</fullName>
        <label>Personal Or Entity Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Entity_Address__c</fullName>
        <label>Second Entity Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Entity_Business_Start__c</fullName>
        <label>Second Entity Business Start</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Entity_EIN__c</fullName>
        <label>Second Entity EIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Entity_Name__c</fullName>
        <label>Second Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Entity_Tax_type__c</fullName>
        <label>Second Entity Tax type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Entity_Year_end_Date__c</fullName>
        <label>Second Entity Year end Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sixth_Entity_Request__c</fullName>
        <label>Sixth Entity Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spouses_SS_Number__c</fullName>
        <label>Spouses SS Number</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_Email__c</fullName>
        <label>Tax Payer Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_First_Name__c</fullName>
        <label>Tax Payer First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_Last_Name__c</fullName>
        <label>Tax Payer Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_Phone__c</fullName>
        <label>Tax Payer Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_SS__c</fullName>
        <label>Tax Payer SS#</label>
        <length>12</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Third_Entity_Address__c</fullName>
        <label>Third Entity Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Entity_Business_Start__c</fullName>
        <label>Third Entity Business Start</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Entity_EIN__c</fullName>
        <label>Third Entity EIN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Entity_Name__c</fullName>
        <label>Third Entity Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Entity_Tax_Type__c</fullName>
        <label>Third Entity Tax Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Entity_Year_end_Date__c</fullName>
        <label>Third Entity Year end Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1st_Entity_Address__c</fullName>
        <label>1st Entity Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4th_Entity_Address__c</fullName>
        <label>4th Entity Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Tax Extension Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Extension</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Extension Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>